fix logo not showing up

--- a/_sass/responsive.scss
+++ b/_sass/responsive.scss
@@ -929,8 +929,7 @@
             z-index: 12345678;
 
             img {
-                max-width: 120px;
-                width: 100%;
+                width: 120px;
             }
         }
     }
